@@ -16,6 +16,7 @@
  */
 package org.apache.nutch.plugin;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.HashMap;
 
 import org.apache.hadoop.conf.Configuration;
@@ -25,8 +26,6 @@ import org.apache.hadoop.conf.Configurable;
  * An <code>Extension</code> is a kind of listener descriptor that will be
  * installed on a concrete <code>ExtensionPoint</code> that acts as kind of
  * Publisher.
- * 
- * @author joa23
  */
 public class Extension {
   private PluginDescriptor fDescriptor;
@@ -35,7 +34,6 @@ public class Extension {
   private String fClazz;
   private HashMap<String, String> fAttributes;
   private Configuration conf;
-  private PluginRepository pluginRepository;
 
   /**
    * @param pDescriptor
@@ -48,13 +46,12 @@ public class Extension {
   public Extension(PluginDescriptor pDescriptor, String pExtensionPoint,
       String pId, String pExtensionClass, Configuration conf,
       PluginRepository pluginRepository) {
-    fAttributes = new HashMap<String, String>();
+    fAttributes = new HashMap<>();
     setDescriptor(pDescriptor);
     setExtensionPoint(pExtensionPoint);
     setId(pId);
     setClazz(pExtensionClass);
     this.conf = conf;
-    this.pluginRepository = pluginRepository;
   }
 
   /**
@@ -98,8 +95,10 @@ public class Extension {
    * Adds a attribute and is only used until model creation at plugin system
    * start up.
    * 
-   * @param pKey a key
-   * @param pValue a value
+   * @param pKey
+   *          a key
+   * @param pValue
+   *          a value
    */
   public void addAttribute(String pKey, String pValue) {
     fAttributes.put(pKey, pValue);
@@ -109,7 +108,8 @@ public class Extension {
    * Sets the Class that implement the concret extension and is only used until
    * model creation at system start up.
    * 
-   * @param extensionClazz The extensionClasname to set
+   * @param extensionClazz
+   *          The extensionClasname to set
    */
   public void setClazz(String extensionClazz) {
     fClazz = extensionClazz;
@@ -119,7 +119,8 @@ public class Extension {
    * Sets the unique extension Id and is only used until model creation at
    * system start up.
    * 
-   * @param extensionID The extensionID to set
+   * @param extensionID
+   *          The extensionID to set
    */
   public void setId(String extensionID) {
     fId = extensionID;
@@ -152,13 +153,19 @@ public class Extension {
     // Suggested by Stefan Groschupf <sg@media-style.com>
     synchronized (getId()) {
       try {
-        PluginClassLoader loader = fDescriptor.getClassLoader();
-        Class extensionClazz = loader.loadClass(getClazz());
+        PluginRepository pluginRepository = PluginRepository.get(conf);
+        Class<?> extensionClazz = pluginRepository.getCachedClass(fDescriptor,
+            getClazz());
         // lazy loading of Plugin in case there is no instance of the plugin
         // already.
-        this.pluginRepository.getPluginInstance(getDescriptor());
-        Object object = extensionClazz.newInstance();
-        if (object instanceof Configurable) {
+        pluginRepository.getPluginInstance(getDescriptor());
+        Object object = null;
+        try {
+          object = extensionClazz.getConstructor().newInstance();
+        } catch (IllegalArgumentException | InvocationTargetException | NoSuchMethodException | SecurityException e) {
+          e.printStackTrace();
+        }
+        if (object != null && object instanceof Configurable) {
           ((Configurable) object).setConf(this.conf);
         }
         return object;
@@ -189,5 +196,9 @@ public class Extension {
    */
   public void setDescriptor(PluginDescriptor pDescriptor) {
     fDescriptor = pDescriptor;
+  }
+
+  public String toString() {
+    return getId() + ", " + getClazz() + ", " + getTargetPoint();
   }
 }
